--- a/gateway/src/html/left.html
+++ b/gateway/src/html/left.html
@@ -58,8 +58,8 @@
             <span><img src="images/leftico02.png"/></span>员工管理
         </div>
         <ul class="menuson">
-            <li><cite></cite><a href="carerrs.html" target="rightFrame">员工列表</a></li>
-            <li><cite></cite><a href="addcareer.html" target="rightFrame">增加员工</a></li>
+            <li><cite></cite><a href="employee.html" target="rightFrame">员工列表</a></li>
+            <li><cite></cite><a href="addemployee.html" target="rightFrame">增加员工</a></li>
         </ul>
     </dd>
 </dl>
