--- a/gateway/src/html/left.html
+++ b/gateway/src/html/left.html
@@ -59,7 +59,16 @@
         </div>
         <ul class="menuson">
             <li><cite></cite><a href="employee.html" target="rightFrame">员工列表</a></li>
-            <li><cite></cite><a href="addemployee.html" target="rightFrame">增加员工</a></li>
+            <li><cite></cite><a href="addEmployee.html" target="rightFrame">增加员工</a></li>
+        </ul>
+    </dd>
+    <dd>
+        <div class="title">
+            <span><img src="images/leftico02.png"/> </span>职位管理
+        </div>
+        <ul class="menuson">
+            <li><cite></cite><a href="career.html" target="rightFrame">职位列表</a> </li>
+            <li><cite></cite><a href="addCareer.html" target="rightFrame">添加职位</a> </li>
         </ul>
     </dd>
 </dl>
